# pxl_imp_imgconvolution

./: .gitignore  README.md  README2.md
C/: .gitignore  main  main.c
C/functions/: convolution.c  convolution.h  pooling.c  pooling.h  tasklib.c  tasklib.h
Cuda/: .gitignore  all_nostream.nsys-rep  all_stream.nsys-rep  cuda_nostream.nsys-rep  cuda_stream.nsys-rep  main.cu  nvprof.nsys-rep  report1.nsys-rep
Cuda/functions/: convolution.cu  convolution.h  pooling.cu  pooling.h  tasklib.cu  tasklib.h
Edge_convolution_HLS/convolution_edge/: 10images_convert_jupyter_notebook.py
Edge_convolution_HLS/pynq_2DConvolution/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
Edge_convolution_HLS/pynq_2DConvolution/.apc/: autopilot.apfmapping
Edge_convolution_HLS/pynq_2DConvolution/solution1/: directives.tcl  script.tcl  solution1.aps
Edge_convolution_HLS/pynq_2DConvolution/solution1/impl/ip/drivers/conv2d_edge_v1_0/src/: CMakeLists.txt  xconv2d_edge.h
Edge_convolution_HLS/pynq_2DConvolution/source/: conv2d_edge.cpp  conv2d_edge_tb.cpp
HLS/convolution/convolution_edge/: convolution_edge.xpr
HLS/convolution/jupyter/: convolution_image.ipynb  livestreaming_convolution.ipynb
HLS/convolution/pynq_2DConvolution/: .cproject  .vitis_hls_log_all.xml  hls.app
HLS/convolution/pynq_2DConvolution/solution1/: script.tcl  solution1.aps  (+2 more)
HLS/pooling/jupyter/: design_1_wrapper.hwh  livestream_pooling.ipynb  min_max_pooling.ipynb
HLS/pooling/pooling_min_max/: pooling_min_max.xpr  vivado.jou
HLS/pooling/pynq_pooling/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
(+733 files in other folders)
